Fixed dynamic text moving hero elements around on Mobile.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 .header-nav {
-  width: 51.2vw;
+  width: 52vw;
 
   padding: 2rem 24vw;
 
@@ -41,7 +41,7 @@
   .header-nav {
     padding: 1rem 12vw;
 
-    width: 74.1vw;
+    width: 76vw;
   }
 
   .header-nav h2 {
