--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -11,6 +11,7 @@
 }
 
 .hero-div h1 {
+  margin: 0;
   padding-top: 0;
 }
 
@@ -19,6 +20,11 @@
 
   display: flex;
   justify-content: left;
+}
+
+.hero-dynamic-text-wrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 .hero-h1-dynamic-text {
@@ -62,6 +68,23 @@
     height: 60vh;
 
     padding-top: min(20vh);
+  }
+
+  .hero-info {
+    font-size: 2rem;
+  }
+
+  .hero-div-text-container {
+    padding: 1rem;
+
+    display: grid;
+    grid: auto-fit 1fr / 1fr;
+
+    font-size: 2.8rem;
+  }
+
+  .hero-dynamic-text-wrapper {
+    height: 120px;
   }
 
   .hero-div-button-container {
