--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,7 +35,7 @@ code {
 h1 {
   padding-top: 35px;
   margin-bottom: 4rem;
-  font-size: 6rem;
+  font-size: 4.8rem;
 }
 
 a {
